--- a/style.css
+++ b/style.css
@@ -43,6 +43,13 @@ td {padding: 10px;}
     table-layout: fixed;
 }
 
+@media (max-width: 600px) {
+  #abttable td, #projtable td { 
+    display: block; 
+    width: 100%; 
+  }
+}
+
 button { 
     cursor: pointer; 
     margin: 20px;
